# Raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  canon.cpp  canon.h  canon.hpp  canvas.cpp  canvas.hpp  color.cpp  color.h  color.hpp  computation.hpp  intersection.hpp  lights.hpp  material.hpp  matrix.hpp  matrix2.hpp  matrix3.hpp  matrix4.hpp  object.hpp  point.h  point.hpp  ray.hpp  sphere.hpp  tuple.cpp  tuple.h  tuple.hpp  vector.h  vector.hpp  world.hpp
src/: camera.cpp  canon.cpp  canvas.cpp  color.cpp  computation.cpp  intersection.cpp  lights.cpp  main.cpp  material.cpp  matrix.cpp  object.cpp  ray.cpp  sphere.cpp  tuple.cpp  vector.cpp  world.cpp
tests/: intro_test.cpp  main_tests.cpp
